[tool.poetry]
name = "rs274-parser"
version = "0.2.0"
description = ""
authors = ["Robert Kirberich <robert@kirberich.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pe = "^0.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.9.9"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportMatchNotExhaustive = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report=html --cov-report=term"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
omit = [
  "tests/*",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Disable fix for unused imports (`F401`).
select = ['I']
unfixable = ["F401"]
